--- a/monitoring.html
+++ b/monitoring.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lets Serv мониторинг</title>
 
-    <link rel="stylesheet" href="assets/styles/index.css">
     <link rel="stylesheet" href="assets/styles/main.min.css">
+
+    <link rel="stylesheet" href="assets/styles/monitoring.css">
     <link rel="stylesheet" href="assets/styles/color.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,69 +28,10 @@
             <input type="button" value="темная" id="toggle-theme" />
             <div class="container_nav">
                 <ul>
-                    <li id="activePopup"><a href="services.html"><span>У</span>слуги</a></li>
+                    <li><a href="services.html"><span>У</span>слуги</a></li>
                     <li><a href="stands.html"><span>У</span>чебные IT стенды</a></li>
                     <li><a href="#"><span>М</span>ониторинг</a></li>
                     <li><a href=""><span>К</span>онтакты</a></li>
-                </ul>
-            </div>
-            <div class="container_popup" id="containerPopup">
-                <ul>
-                    <li>
-                        <a href="/page.one.html">
-                            <span>С</span>етевая инфраструктура
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>I</span>P-телефония
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>В</span>ычислительные комплексы 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>В</span>истемы хранения данных
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>П</span>латформы Виртуализации 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>Р</span>езервирование (бэкапы) 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>М</span>ониторинг
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>И</span>нформационная безопасность
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>К</span>омпьютерно-техническая экспертиза
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>О</span>блачные сервисы 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>О</span>идеонаблюдение
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
