--- a/stands.html
+++ b/stands.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lets Serv учебные it стенды</title>
 
-    <link rel="stylesheet" href="assets/styles/index.css">
     <link rel="stylesheet" href="assets/styles/main.min.css">
+
+    <link rel="stylesheet" href="assets/styles/stands.css">
     <link rel="stylesheet" href="assets/styles/color.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,69 +28,10 @@
             <input type="button" value="темная" id="toggle-theme" />
             <div class="container_nav">
                 <ul>
-                    <li id="activePopup"><a href="services.html"><span>У</span>слуги</a></li>
+                    <li><a href="services.html"><span>У</span>слуги</a></li>
                     <li><a href="#"><span>У</span>чебные IT стенды</a></li>
                     <li><a href="monitoring.html"><span>М</span>ониторинг</a></li>
                     <li><a href=""><span>К</span>онтакты</a></li>
-                </ul>
-            </div>
-            <div class="container_popup" id="containerPopup">
-                <ul>
-                    <li>
-                        <a href="/page.one.html">
-                            <span>С</span>етевая инфраструктура
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>I</span>P-телефония
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>В</span>ычислительные комплексы 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>В</span>истемы хранения данных
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>П</span>латформы Виртуализации 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>Р</span>езервирование (бэкапы) 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>М</span>ониторинг
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>И</span>нформационная безопасность
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>К</span>омпьютерно-техническая экспертиза
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>О</span>блачные сервисы 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span>О</span>идеонаблюдение
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -354,50 +296,88 @@
                     </div>
                 </div>
             </div>
-            <script>
-let standOne = document.getElementById('standOne')
-let standTwo = document.getElementById('standTwo')
-let standThree = document.getElementById('standThree')
-
-let cardST1 = document.getElementById('cardST1')
-let cardST2 = document.getElementById('cardST2')
-let cardST3 = document.getElementById('cardST3')
-
-let buttonClean1 = document.getElementById('buttonClean1')
-let buttonClean2 = document.getElementById('buttonClean2')
-let buttonClean3 = document.getElementById('buttonClean3')
-
-
-let wrapperCard = document.getElementById('wrapperCard')
-
-standOne.addEventListener("click", function() {
-    cardST1.classList.remove('noneCard')
-    wrapperCard.classList.add('noneCard')
-})
-
-standTwo.addEventListener("click", function() {
-    cardST2.classList.remove('noneCard')
-    wrapperCard.classList.add('noneCard')
-})
-
-standThree.addEventListener("click", function() {
-    cardST3.classList.remove('noneCard')
-    wrapperCard.classList.add('noneCard')
-})
-
-buttonClean1.addEventListener("click", function() {
-    wrapperCard.classList.remove('noneCard')
-    cardST1.classList.add('noneCard')
-})
-buttonClean2.addEventListener("click", function() {
-    wrapperCard.classList.remove('noneCard')
-    cardST2.classList.add('noneCard')
-})
-buttonClean3.addEventListener("click", function() {
-    wrapperCard.classList.remove('noneCard')
-    cardST3.classList.add('noneCard')
-})
-            </script>
+        </div>
+    </section>
+    <section class="container__advantages standard_container bg_content">
+        <h1 class="indent"><span>I</span>T стенд это</h1>
+        <div class="wrapper__advantages wrapper__monitoring indent">
+            <div class="card card_1">
+                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
+                    <path d="M13 10L13 60.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M27 10L27 60.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M41 10V60.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M55 10V60.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M36 50H47" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M49 20H60" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M21 24H32" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M7 37H18" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    </svg>
+                <div>
+                    <h1><span>К</span>ачество</h1>
+                    <p><span>М</span>ониторинг серверов, сетевого оборудования и приложений.</p>
+                </div>
+            </div>
+            <div class="card card_2">
+                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
+                    <path d="M23 20L23 55.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M49 20V44.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M23.0003 20C31.5003 14.4998 39 24 49.0003 20.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    <path d="M23.0003 44.7645C31.5003 39.2644 39 48.7645 49.0003 44.7745" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
+                    </svg>
+                    
+                <div>
+                    <h1><span>Л</span>ёгкость в обучение</h1>
+                    <p><span>Б</span>ыстрое выявление и устранение сбоев и проблем, возникающих в IT-инфраструктуре компании.</p>
+                </div>
+            </div>
+            <div class="card card_3">
+                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
+                    <path d="M14 37.02V40.02H20V37.02H14ZM20 20C20 18.3432 18.6569 17 17 17C15.3431 17 14 18.3432 14 20H20ZM20 37.02V20H14L14 37.02H20Z" fill="#4AFF93"/>
+                    <line x1="46.5355" y1="50" x2="52.9136" y2="56.3781" stroke="#4AFF93" stroke-width="5" stroke-linecap="round"/>
+                    <path d="M24 37V40H30V37H24ZM30 30C30 28.3431 28.6569 27 27 27C25.3431 27 24 28.3431 24 30H30ZM30 37V30H24V37H30Z" fill="#4AFF93"/>
+                    <path d="M35 37V40H41V37H35ZM41 25C41 23.3431 39.6569 22 38 22C36.3431 22 35 23.3431 35 25H41ZM41 37V25H35V37H41Z" fill="#4AFF93"/>
+                    <path d="M45 39V42H51V39H45ZM51 28C51 26.3431 49.6569 25 48 25C46.3431 25 45 26.3431 45 28H51ZM51 39V28H45V39H51Z" fill="#4AFF93"/>
+                    <line x1="11" y1="44.5" x2="23.02" y2="44.5" stroke="#4AFF93" stroke-width="5"/>
+                    <circle class="circle-mon" cx="37.5" cy="42.5" r="12.5" fill="#FFFFFF"/>
+                    </svg>
+                <div>
+                    <h1><span>П</span>рост в использовании</h1>
+                    <p><span>П</span>роведение пост-инцидентного анализа для выявления первопричин.</p>
+                </div>
+            </div>
+            <div class="card card_4">
+                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
+                    <path d="M56.7679 36.7678C57.7442 35.7915 57.7442 34.2085 56.7679 33.2322L40.858 17.3223C39.8817 16.346 38.2987 16.346 37.3224 17.3223C36.3461 18.2986 36.3461 19.8816 37.3224 20.8579L51.4646 35L37.3224 49.1421C36.3461 50.1184 36.3461 51.7014 37.3224 52.6777C38.2987 53.654 39.8817 53.654 40.858 52.6777L56.7679 36.7678ZM55 37.5H55.0001V32.5H55V37.5Z" fill="#4AFF93"/>
+                    <path d="M9.23213 33.2322C8.25582 34.2085 8.25582 35.7915 9.23213 36.7678L25.142 52.6777C26.1183 53.654 27.7013 53.654 28.6776 52.6777C29.6539 51.7014 29.6539 50.1184 28.6776 49.1421L14.5354 35L28.6776 20.8579C29.6539 19.8816 29.6539 18.2986 28.6776 17.3223C27.7013 16.346 26.1183 16.346 25.142 17.3223L9.23213 33.2322ZM11 32.5H10.9999V37.5H11V32.5Z" fill="#4AFF93"/>
+                    </svg>
+                <div>
+                    <h1><span>У</span>зкая направленность</h1>
+                    <p><span>О</span>ценка рисков, внедрение защитных мер.</p>
+                </div>
+            </div>
+            <div class="card card_3">
+                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
+                    <circle cx="33.5" cy="34.5" r="10" stroke="#4AFF93" stroke-width="3"/>
+                    <circle cx="34" cy="35" r="25.5" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="37.5" y1="10" x2="37.5" y2="25" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="28.5" y1="10" x2="28.5" y2="25" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="37.5" y1="44" x2="37.5" y2="59" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="28.5" y1="44" x2="28.5" y2="59" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="57.9971" y1="38.942" x2="42.9971" y2="38.942" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="58.1143" y1="29.9427" x2="43.1143" y2="29.9427" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="24" y1="38.4991" x2="9" y2="38.4991" stroke="#4AFF93" stroke-width="3"/>
+                    <line x1="24.1172" y1="29.5" x2="9.11719" y2="29.5" stroke="#4AFF93" stroke-width="3"/>
+                    </svg> 
+                <div>
+                    <h1><span>П</span>олезный</h1>
+                    <p><span>О</span>казание удалённой помощи и консультаций пользователям и IT-персоналу.</p>
+                </div>
+            </div>
         </div>
     </section>
     <section class="container__form standard_container bg_content indent">
