--- a/forms.html
+++ b/forms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Центр IT мониторинга и реагирования на инциденты</title>
+    <title>Lets Serv планирование и реализация IT инфрастукруры</title>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/imges/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/imges/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/imges/favicon/favicon-16x16.png">
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="assets/styles/main.min.css">
 
-    <link rel="stylesheet" href="assets/styles/monitoring.css">
+    <link rel="stylesheet" href="assets/styles/index.css">
     <link rel="stylesheet" href="assets/styles/color.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
     <header id="hed" class="header bg_content indent">
         <div class="box__">
             <div class="container_logo">
-                <a class="logo" href="https://mahimka1321.github.io/b_s/">
+                <a class="logo" href="index.html">
                     <svg width="1400" height="500" viewBox="0 0 1400 500" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M657 17.2261L602 40.2261L558 59.2261L489 72.2261L462 78.2261L464 159.226L472 237.226L491 299.226L518 353.226L537 379.226L560 411.226L608 451.226L654 480.226L657 17.2261Z" fill="#4AFF7D"/>
                         <path d="M654 23.2261V480.226L720 440.226L790 356.226L820 290.226L839 230.226L845 153.226L848 97.2261L849 80.2261L791 65.2261L700 39.2261L671 24.2261L652 17.2261L654 23.2261Z" fill="#15B241"/>
@@ -69,7 +69,7 @@
                         <path class="logo_th-w" d="M1093.8 216.826H1051.9L1048.3 239.526H1088.1L1083.4 269.426H1043.6L1039.8 292.826H1081.7L1077.1 322.626H999.9L1021.3 186.926H1098.5L1093.8 216.826Z" fill="white"/>
                         <path class="logo_th-w" d="M1186.9 267.026L1220.7 322.626H1176.8L1151.8 270.426H1151.4L1143.1 322.626H1107.8L1129.2 186.926H1181.9C1196.1 186.926 1206.9 190.426 1214.5 197.326C1222.1 204.326 1224.8 214.726 1222.6 228.626C1221 238.326 1217.1 246.726 1210.7 253.826C1204.4 260.926 1196.4 265.326 1186.9 267.026ZM1160.4 213.926L1155 247.726H1158.4C1161.6 247.726 1164.6 247.526 1167.2 247.126C1169.8 246.726 1172.5 245.926 1175.3 244.926C1178.1 243.826 1180.3 242.126 1182.1 239.726C1183.8 237.326 1185 234.426 1185.5 230.926C1186 227.426 1185.8 224.526 1184.8 222.126C1183.8 219.726 1182.1 218.026 1179.8 216.926C1177.5 215.826 1175 215.126 1172.5 214.726C1170 214.326 1167.1 214.126 1163.9 214.126H1160.4V213.926Z" fill="white"/>
                         <path class="logo_th-w" d="M1281.2 186.926L1301 269.326L1346.9 186.926H1385.2L1305.8 322.626H1278.4L1242.8 186.926H1281.2Z" fill="white"/>
-                     </svg> 
+                     </svg>                        
                 </a>
             </div>
             <input type="button" value="темная" id="toggle-theme" />
@@ -77,121 +77,13 @@
                 <ul>
                     <li><a href="services.html"><span>У</span>слуги</a></li>
                     <li><a href="stands.html"><span>У</span>чебные IT стенды</a></li>
-                    <li><a href="#"><span>М</span>ониторинг</a></li>
-                    <li><a href="forms.html"><span>К</span>онтакты</a></li>
+                    <li><a href="monitoring.html"><span>М</span>ониторинг</a></li>
+                    <li><a href="#"><span>К</span>онтакты</a></li>
                 </ul>
             </div>
         </div>
     </header>
-    <section class="bg_content standard_container container__monitoring_about container__bg_gradient indent">
-        <div class="contetn__about_one standard_content content_info content__info_monitoring">
-            <div class="text__solving_problemsabout_content-info text_monitoring">
-                <h1><span>Ц</span>ентр IT мониторинга и реагирования на инциденты.</h1>
-                <h2>Берём вашу IT инфраструктуру под наше наблюдение.</h2>
-            </div>
-            <div class="content__iso_text">
-                <img src="assets/imges/Node.png" alt="">
-                <div>
-                    <p><span>Д</span>ля более подробной информации по it мониторингу, закажите у нас консультацию.</p>
-                    <button>Заказать консультацию</button>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="container__advantages standard_container bg_content">
-        <h1 class="indent"><span>Р</span>оль центра мониторинга</h1>
-        <div class="wrapper__advantages wrapper__monitoring indent">
-            <div class="card card_1">
-                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
-                    <path d="M13 10L13 60.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
-                    <path d="M27 10L27 60.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
-                    <path d="M41 10V60.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
-                    <path d="M55 10V60.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
-                    <path d="M36 50H47" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
-                    <path d="M49 20H60" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
-                    <path d="M21 24H32" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
-                    <path d="M7 37H18" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
-                    </svg>
-                <div>
-                    <h1><span>К</span>онтроль работоспособности оборудования и систем:</h1>
-                    <p><span>М</span>ониторинг серверов, сетевого оборудования и приложений.</p>
-                </div>
-            </div>
-            <div class="card card_2">
-                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
-                    <path d="M23 20L23 55.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
-                    <path d="M49 20V44.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
-                    <path d="M23.0003 20C31.5003 14.4998 39 24 49.0003 20.01" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
-                    <path d="M23.0003 44.7645C31.5003 39.2644 39 48.7645 49.0003 44.7745" stroke="#4AFF93" stroke-width="4" stroke-linecap="round"/>
-                    </svg>
-                    
-                <div>
-                    <h1><span>О</span>перативное реагирование на инциденты:</h1>
-                    <p><span>Б</span>ыстрое выявление и устранение сбоев и проблем, возникающих в IT-инфраструктуре компании.</p>
-                </div>
-            </div>
-            <div class="card card_3">
-                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
-                    <path d="M14 37.02V40.02H20V37.02H14ZM20 20C20 18.3432 18.6569 17 17 17C15.3431 17 14 18.3432 14 20H20ZM20 37.02V20H14L14 37.02H20Z" fill="#4AFF93"/>
-                    <line x1="46.5355" y1="50" x2="52.9136" y2="56.3781" stroke="#4AFF93" stroke-width="5" stroke-linecap="round"/>
-                    <path d="M24 37V40H30V37H24ZM30 30C30 28.3431 28.6569 27 27 27C25.3431 27 24 28.3431 24 30H30ZM30 37V30H24V37H30Z" fill="#4AFF93"/>
-                    <path d="M35 37V40H41V37H35ZM41 25C41 23.3431 39.6569 22 38 22C36.3431 22 35 23.3431 35 25H41ZM41 37V25H35V37H41Z" fill="#4AFF93"/>
-                    <path d="M45 39V42H51V39H45ZM51 28C51 26.3431 49.6569 25 48 25C46.3431 25 45 26.3431 45 28H51ZM51 39V28H45V39H51Z" fill="#4AFF93"/>
-                    <line x1="11" y1="44.5" x2="23.02" y2="44.5" stroke="#4AFF93" stroke-width="5"/>
-                    <circle class="circle-mon" cx="37.5" cy="42.5" r="12.5" fill="#FFFFFF"/>
-                    </svg>
-                <div>
-                    <h1><span>А</span>нализ инцидентов и причин их возникновения:</h1>
-                    <p><span>П</span>роведение пост-инцидентного анализа для выявления первопричин.</p>
-                </div>
-            </div>
-            <div class="card card_4">
-                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
-                    <path d="M56.7679 36.7678C57.7442 35.7915 57.7442 34.2085 56.7679 33.2322L40.858 17.3223C39.8817 16.346 38.2987 16.346 37.3224 17.3223C36.3461 18.2986 36.3461 19.8816 37.3224 20.8579L51.4646 35L37.3224 49.1421C36.3461 50.1184 36.3461 51.7014 37.3224 52.6777C38.2987 53.654 39.8817 53.654 40.858 52.6777L56.7679 36.7678ZM55 37.5H55.0001V32.5H55V37.5Z" fill="#4AFF93"/>
-                    <path d="M9.23213 33.2322C8.25582 34.2085 8.25582 35.7915 9.23213 36.7678L25.142 52.6777C26.1183 53.654 27.7013 53.654 28.6776 52.6777C29.6539 51.7014 29.6539 50.1184 28.6776 49.1421L14.5354 35L28.6776 20.8579C29.6539 19.8816 29.6539 18.2986 28.6776 17.3223C27.7013 16.346 26.1183 16.346 25.142 17.3223L9.23213 33.2322ZM11 32.5H10.9999V37.5H11V32.5Z" fill="#4AFF93"/>
-                    </svg>
-                <div>
-                    <h1><span>Р</span>азработка и реализация контрмер против внешних угроз и уязвимостей:</h1>
-                    <p><span>О</span>ценка рисков, внедрение защитных мер.</p>
-                </div>
-            </div>
-            <div class="card card_3">
-                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
-                    <circle cx="33.5" cy="34.5" r="10" stroke="#4AFF93" stroke-width="3"/>
-                    <circle cx="34" cy="35" r="25.5" stroke="#4AFF93" stroke-width="3"/>
-                    <line x1="37.5" y1="10" x2="37.5" y2="25" stroke="#4AFF93" stroke-width="3"/>
-                    <line x1="28.5" y1="10" x2="28.5" y2="25" stroke="#4AFF93" stroke-width="3"/>
-                    <line x1="37.5" y1="44" x2="37.5" y2="59" stroke="#4AFF93" stroke-width="3"/>
-                    <line x1="28.5" y1="44" x2="28.5" y2="59" stroke="#4AFF93" stroke-width="3"/>
-                    <line x1="57.9971" y1="38.942" x2="42.9971" y2="38.942" stroke="#4AFF93" stroke-width="3"/>
-                    <line x1="58.1143" y1="29.9427" x2="43.1143" y2="29.9427" stroke="#4AFF93" stroke-width="3"/>
-                    <line x1="24" y1="38.4991" x2="9" y2="38.4991" stroke="#4AFF93" stroke-width="3"/>
-                    <line x1="24.1172" y1="29.5" x2="9.11719" y2="29.5" stroke="#4AFF93" stroke-width="3"/>
-                    </svg> 
-                <div>
-                    <h1><span>П</span>оддержка непрерывной работоспособности:</h1>
-                    <p><span>О</span>казание удалённой помощи и консультаций пользователям и IT-персоналу.</p>
-                </div>
-            </div>
-            <div class="card card_4">
-                <svg class="prem__svg_monitoring" width="68" height="70" viewBox="0 0 68 70" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="2" y="2" width="64" height="66" rx="6" stroke="#4AFF93" stroke-width="4"/>
-                    <path d="M35.299 15.25L56.0836 51.25C56.661 52.25 55.9393 53.5 54.7846 53.5H13.2154C12.0607 53.5 11.339 52.25 11.9164 51.25L32.701 15.25C33.2783 14.25 34.7217 14.25 35.299 15.25Z" stroke="#4AFF93" stroke-width="3"/>
-                    <path class="circle-mon" d="M35.1602 30.5455L34.9897 43.0909H33.0124L32.842 30.5455H35.1602ZM34.0011 48.1364C33.5806 48.1364 33.2198 47.9858 32.9187 47.6847C32.6175 47.3835 32.467 47.0227 32.467 46.6023C32.467 46.1818 32.6175 45.821 32.9187 45.5199C33.2198 45.2187 33.5806 45.0682 34.0011 45.0682C34.4215 45.0682 34.7823 45.2187 35.0835 45.5199C35.3846 45.821 35.5352 46.1818 35.5352 46.6023C35.5352 46.8807 35.4641 47.1364 35.3221 47.3693C35.1857 47.6023 35.0011 47.7898 34.7681 47.9318C34.5408 48.0682 34.2852 48.1364 34.0011 48.1364Z" fill="none" stroke-width="0"/>
-                    </svg>                    
-                <div>
-                    <h1><span>П</span>роактивное предупреждение инцидентов:</h1>
-                    <p><span>П</span>редсказание потенциальных проблем на основе мониторинга и анализа данных.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="container__form standard_container bg_content indent">
+    <section class="container__form standard_container bg_content st__form_control indent">
         <div class="form__content_">
             <div class="text__form_content">
                 <h1><span>О</span>бсудим ваш проект?</h1>
@@ -242,7 +134,8 @@
         </div>
     </section>
     <footer class="footer standard_container bg_content indent">
-        <h1><span>L</span>ets <span>S</span>erv</h1>  
+        <h1><span>L</span>ets <span>S</span>erv</h1>
+        
     </footer>
 </body>
 <script src="assets/js/index.js"></script>
