--- a/stands.html
+++ b/stands.html
@@ -78,7 +78,7 @@
                     <li><a href="services.html"><span>У</span>слуги</a></li>
                     <li><a href="#"><span>У</span>чебные IT стенды</a></li>
                     <li><a href="monitoring.html"><span>М</span>ониторинг</a></li>
-                    <li><a href=""><span>К</span>онтакты</a></li>
+                    <li><a href="forms.html"><span>К</span>онтакты</a></li>
                 </ul>
             </div>
         </div>
