--- a/stands.html
+++ b/stands.html
@@ -91,7 +91,12 @@
                     Стенды сделаны из качественных материалов и прослужат вам долгое время.</p>   
                 <p><span>Н</span>а нашем канале можно посмотреть <a href="https://rutube.ru/channel/26784998/">обзоры</a></p>
             </div>
-            <div class="img__swap_stand"></div>         
+            <div class="img__swap_stand">
+                <img class="img_1" src="assets/imges/oval.png" alt="">
+                <img class="img_2" src="assets/imges/kryg.png" alt="">
+                <img class="img_3" src="assets/imges/kv.png" alt="">
+                <img class="img_4" src="assets/imges/treygol.png" alt="">
+            </div>         
         </div>
         <div class="line"></div>
         <div class="content__stands_shop">
