--- a/services.html
+++ b/services.html
@@ -90,7 +90,9 @@
             <p>Ниже вы можите ознакомится с частью услуг. Если вы не сможите найти подходящюю для вас услугу, то запишитесь к нам на консультацию.</p>
             <a class="btn_form_form" href="forms.html">Заказать услугу</a>
            </div>
-           <img src="assets/imges/BrowserConnection.png" alt="">
+           <div class="img_services_bg">
+            <div></div>
+           </div>
         </div>
         <div class="line"></div>
         <div class="form__content_">
