--- a/forms.html
+++ b/forms.html
@@ -135,7 +135,12 @@
     </section>
     <footer class="footer standard_container bg_content indent">
         <h1><span>L</span>ets <span>S</span>erv</h1>
-        <p>ИП Бараков Владислав Юрьевич <span>324330000012601</span></p>
+        <div>
+            <p>ИП Бараков Владислав Юрьевич <span>ИНН 332904921623</span></p> 
+            <a href="tel:+79157792861" ><span>Тел.</span> +7(915) 779 28-61</a>
+        </div>
+        <p>Владимирская область, г.Владимир, ул.Большая Нижегородская, д.34Б, офис 220.</p>
+        <p>letsserv@yandex.ru</p>
     </footer>
 </body>
 <script src="assets/js/index.js"></script>
