--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </section>
     <section class="container__form-contact standard_container bg_content indent">
         <h1><span>О</span>птимизируй / Созндай свою IT-инфраструктуру</h1>
-        <a class="btn_form_form" href="forms.html">Заказать консультацию</a>
+        <a class="btn_form_form op__" href="forms.html">Заказать консультацию</a>
     </section>
     <section class="container__advantages standard_container bg_content">
         <h1 class="indent"><span>Н</span>аши преимущества</h1>
