--- a/stands.html
+++ b/stands.html
@@ -198,7 +198,7 @@
                                 <p id="aboutStand"></p>
                             </div>
                             <div class="open__card_btn-st">
-                                <button>Смотреть обзор</button>
+                                <button class="btn_form_form">Смотреть обзор</button>
                                 <a class="btn_form_form" href="forms.html">Заказать стенд</a>
                             </div>
                         </div>
@@ -334,7 +334,7 @@
                         <input type="checkbox" checked>
                         <p><span>П</span>одтвердите отправку</p>
                     </div>
-                    <button>Отправить</button>
+                    <button class="btn_form_form">Отправить</button>
                 </div>
             </div>
         </div>
