--- a/monitoring.html
+++ b/monitoring.html
@@ -91,8 +91,8 @@
             <div class="content__iso_text">
                 <img src="assets/imges/Node.png" alt="">
                 <div>
-                    <p><span>Д</span>ля более подробной информации по it мониторингу, закажите у нас консультацию.</p>
-                    <a class="btn_form_form" href="forms.html">Заказать консультацию</a>
+                    <p><span>Д</span>ля получения подробностей по теме мониторинга, его реализации и этапах внедрения</p>
+                    <a class="btn_form_form" href="forms.html">Напишите нам</a>
                 </div>
             </div>
         </div>
