--- a/services.html
+++ b/services.html
@@ -86,7 +86,7 @@
         <div class="container__about_services">
            <div>
             <h1><span>М</span>ы предлагаем различные услуги</h1>
-            <p>Ниже вы можите ознакомится с частью услуг. Если вы не сможите найти подходящюю для вас услугу, то запишитесь к нам на консультацию.</p>
+            <p>Ниже вы можете ознакомиться с основными нашими направлениями в рамках профессиональных услуг. Если вы не находите подходящего для вас пункта, обратитесь к нам за консультацией.</p>
             <a class="btn_form_form" href="forms.html">Заказать услугу</a>
            </div>
            <div class="img_services_bg">
