--- a/stands.html
+++ b/stands.html
@@ -87,7 +87,7 @@
             <div>
                 <h1><span>I</span>T cтенды для обучения</h1>
                 <p><span>Э</span>то будет лучший вариант для обучения ваших учиников. 
-                    Стенды сделаны из качественных материалов и прослужат вам долгое время.</p>   
+                    Стенды из качественных материалов и востребованных комплектующих на сегодняшний день.</p>   
                 <p><span>Н</span>а нашем канале можно посмотреть <a href="https://rutube.ru/channel/26784998/">обзоры</a></p>
             </div>
             <div class="img__swap_stand">
@@ -224,7 +224,7 @@
                     </svg>
                 <div>
                     <h1><span>К</span>ачество</h1>
-                    <p><span>С</span>тенд сделан из высококачественных материалов.</p>
+                    <p><span>С</span>тенд разработан и спроектирован из высококачественных материалов и современных комплектующих.</p>
                 </div>
             </div>
             <div class="card card_2">
@@ -238,7 +238,7 @@
                     
                 <div>
                     <h1><span>Л</span>ёгкость в обучение</h1>
-                    <p><span>У</span> снадна простое ПО для обучнея.</p>
+                    <p><span>Д</span>ля каждого стенда при необходимости имеется программа обучения, с дальнейшей интеграцией в учебный процесс.</p>
                 </div>
             </div>
             <div class="card card_3">
@@ -254,7 +254,7 @@
                     </svg>
                 <div>
                     <h1><span>П</span>рост в использовании</h1>
-                    <p><span>У</span> стенда есть бозовый набор комплектующих, что позволит сделать обучене не нагруженым.</p>
+                    <p><span>В</span>ся структура выступает в виде единого решения, которая была тщательно подобрана и протестирована на совместимость.</p>
                 </div>
             </div>
             <div class="card card_4">
@@ -265,7 +265,7 @@
                     </svg>
                 <div>
                     <h1><span>У</span>зкая направленность</h1>
-                    <p><span>К</span>аждый стенд направлен на определеную специализацию обучения.</p>
+                    <p><span>К</span>аждый стенд закрывает потребность в каком либо направлении и полноценно закрывает его в рамках изучения технологии.</p>
                 </div>
             </div>
             <div class="card card_3">
@@ -284,7 +284,7 @@
                     </svg> 
                 <div>
                     <h1><span>П</span>олезный</h1>
-                    <p><span>С</span>тенд удобен и прост в спользовнии, он будет полезен для обучение ваших учеников.</p>
+                    <p><span>К</span>онфигурация стендов построена на востребованных технологиях, что позволяет использовать полученные знания сразу на практике.</p>
                 </div>
             </div>
         </div>
