--- a/index.html
+++ b/index.html
@@ -89,12 +89,13 @@
                 <h2><span>П</span>ланирование и реализация вашей IT инфрастукруры</h2>
                 <p><span>М</span>ы  подберем вам  подходящее оборудование и настроим его под ваши нужды</p>
                 <div class="our_clients">
-                    <p>Аптека столички</p>
-                    <p>Аптека неофарм</p>
-                    <p>Самокат</p>
-                    <p>Матрикс Инжиниринг Груп</p>
-                    <p>Школы креативных индустрий</p>
-                    <p>ЦОПП</p>
+                    <img src="assets/imges/logo.com/Stolichka.png" alt="">
+                    <img src="assets/imges/logo.com/Matrix.jfif" alt="">
+                    <img src="assets/imges/logo.com/neofarm.jpg" alt="">
+                    <img src="assets/imges/logo.com/Prof.png" alt="">
+                    <img src="assets/imges/logo.com/Samokat.png" alt="">
+                    <img src="assets/imges/logo.com/ShKI.png" alt="">
+                    <img src="assets/imges/logo.com/TsOPP.jpg" alt="">
                 </div>
                 <a class="btn_form_form" href="forms.html">Заказать консультацию</a>
             </div>
